--- a/documentation/manual.lyx
+++ b/documentation/manual.lyx
@@ -627,6 +627,10 @@ experiments/my-experiment/my-experiment.js
 
 \series bold
 http://my-web-server.com/experiments/my-experiment/memory.html
+\begin_inset Newline newline
+\end_inset
+
+
 \end_layout
 
 \end_deeper
